--- a/src/presentacion/pnReporteAerolineas.form
+++ b/src/presentacion/pnReporteAerolineas.form
@@ -39,7 +39,7 @@
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="pnBackground" min="-2" pref="349" max="-2" attributes="0"/>
+          <Component id="pnBackground" alignment="0" pref="449" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
