--- a/src/presentacion/pnPrincipal.form
+++ b/src/presentacion/pnPrincipal.form
@@ -58,55 +58,50 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace min="-2" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" alignment="0" attributes="0">
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="lbLineaTexto4" alignment="0" max="32767" attributes="0"/>
-                              <Component id="lbLineaTexto3" alignment="0" max="32767" attributes="0"/>
-                          </Group>
-                          <EmptySpace min="-2" pref="157" max="-2" attributes="0"/>
-                      </Group>
-                      <Component id="lbLineaTexto5" max="32767" attributes="0"/>
-                      <Component id="lbLineaTexto6" max="32767" attributes="0"/>
-                      <Component id="lbLineaTexto7" max="32767" attributes="0"/>
-                      <Component id="lbLineaTexto8" max="32767" attributes="0"/>
-                      <Component id="lbLineaTexto9" max="32767" attributes="0"/>
-                      <Component id="lbLineaTexto10" max="32767" attributes="0"/>
-                      <Component id="lbLineaTexto1" alignment="0" max="32767" attributes="0"/>
-                      <Group type="102" alignment="0" attributes="0">
-                          <Component id="lbTitulo" max="32767" attributes="0"/>
-                          <EmptySpace min="-2" pref="78" max="-2" attributes="0"/>
-                      </Group>
-                  </Group>
-                  <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
+                  <Component id="lbTitulo" max="32767" attributes="0"/>
+                  <EmptySpace min="78" pref="78" max="-2" attributes="0"/>
               </Group>
+              <Component id="lbLineaTexto1" max="32767" attributes="0"/>
+              <Group type="102" alignment="0" attributes="0">
+                  <Component id="lbLineaTexto3" pref="593" max="32767" attributes="0"/>
+                  <EmptySpace min="157" pref="157" max="-2" attributes="0"/>
+              </Group>
+              <Group type="102" alignment="0" attributes="0">
+                  <Component id="lbLineaTexto4" max="32767" attributes="0"/>
+                  <EmptySpace min="157" pref="157" max="-2" attributes="0"/>
+              </Group>
+              <Component id="lbLineaTexto5" max="32767" attributes="0"/>
+              <Component id="lbLineaTexto6" max="32767" attributes="0"/>
+              <Component id="lbLineaTexto7" max="32767" attributes="0"/>
+              <Component id="lbLineaTexto8" max="32767" attributes="0"/>
+              <Component id="lbLineaTexto9" max="32767" attributes="0"/>
+              <Component id="lbLineaTexto10" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
-                  <EmptySpace min="-2" max="-2" attributes="0"/>
-                  <Component id="lbTitulo" max="32767" attributes="0"/>
-                  <EmptySpace min="-2" max="-2" attributes="0"/>
-                  <Component id="lbLineaTexto1" max="32767" attributes="0"/>
-                  <EmptySpace min="-2" max="-2" attributes="0"/>
-                  <Component id="lbLineaTexto3" max="32767" attributes="0"/>
-                  <EmptySpace min="-2" max="-2" attributes="0"/>
-                  <Component id="lbLineaTexto4" max="32767" attributes="0"/>
-                  <EmptySpace min="-2" max="-2" attributes="0"/>
-                  <Component id="lbLineaTexto5" max="32767" attributes="0"/>
+                  <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
+                  <Component id="lbTitulo" pref="22" max="32767" attributes="0"/>
+                  <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
+                  <Component id="lbLineaTexto1" pref="22" max="32767" attributes="0"/>
+                  <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
+                  <Component id="lbLineaTexto3" pref="22" max="32767" attributes="0"/>
+                  <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
+                  <Component id="lbLineaTexto4" pref="22" max="32767" attributes="0"/>
+                  <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
+                  <Component id="lbLineaTexto5" pref="22" max="32767" attributes="0"/>
                   <EmptySpace min="-2" pref="3" max="-2" attributes="0"/>
-                  <Component id="lbLineaTexto6" max="32767" attributes="0"/>
+                  <Component id="lbLineaTexto6" pref="22" max="32767" attributes="0"/>
                   <EmptySpace min="-2" pref="3" max="-2" attributes="0"/>
-                  <Component id="lbLineaTexto7" max="32767" attributes="0"/>
+                  <Component id="lbLineaTexto7" pref="22" max="32767" attributes="0"/>
                   <EmptySpace min="-2" pref="3" max="-2" attributes="0"/>
-                  <Component id="lbLineaTexto8" max="32767" attributes="0"/>
+                  <Component id="lbLineaTexto8" pref="22" max="32767" attributes="0"/>
                   <EmptySpace min="-2" pref="3" max="-2" attributes="0"/>
-                  <Component id="lbLineaTexto9" max="32767" attributes="0"/>
-                  <EmptySpace min="-2" max="-2" attributes="0"/>
-                  <Component id="lbLineaTexto10" max="32767" attributes="0"/>
-                  <EmptySpace min="-2" pref="166" max="-2" attributes="0"/>
+                  <Component id="lbLineaTexto9" pref="22" max="32767" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Component id="lbLineaTexto10" pref="21" max="32767" attributes="0"/>
+                  <EmptySpace min="-2" pref="143" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -186,7 +181,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="lbTitulo">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Sistema de Manejo de Aeropuertos"/>
+            <Property name="text" type="java.lang.String" value="Sistema de Manejo de Aeropuerto"/>
           </Properties>
         </Component>
       </SubComponents>
