--- a/src/presentacion/pnReporteVuelos.form
+++ b/src/presentacion/pnReporteVuelos.form
@@ -72,11 +72,11 @@
                       </Group>
                       <Group type="102" attributes="0">
                           <Component id="lbInstruccionesVueloEspecial" min="-2" pref="375" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
-                          <Component id="txtIDVueloEspecial" pref="85" max="32767" attributes="0"/>
-                          <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="txtIDVueloEspecial" min="-2" pref="97" max="-2" attributes="0"/>
+                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Component id="btReporteEspecial" max="32767" attributes="0"/>
-                          <EmptySpace min="-2" pref="116" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="142" max="-2" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -86,15 +86,15 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
                   <EmptySpace min="-2" max="-2" attributes="0"/>
-                  <Component id="lbTitulo" pref="23" max="32767" attributes="0"/>
+                  <Component id="lbTitulo" pref="27" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="lbInstruccionesVueloEspecial" alignment="3" pref="41" max="32767" attributes="0"/>
-                      <Component id="txtIDVueloEspecial" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="btReporteEspecial" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
+                      <Component id="txtIDVueloEspecial" alignment="3" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Component id="spnListaVuelos" pref="178" max="32767" attributes="0"/>
+                  <Component id="spnListaVuelos" pref="181" max="32767" attributes="0"/>
                   <EmptySpace min="-2" pref="151" max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -156,10 +156,8 @@
               <Color blue="0" green="0" red="0" type="rgb"/>
             </Property>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
-              <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-                <TitledBorder title="ID">
-                  <Color PropertyName="color" blue="0" green="0" red="0" type="rgb"/>
-                </TitledBorder>
+              <Border info="org.netbeans.modules.form.compat2.border.LineBorderInfo">
+                <LineBorder/>
               </Border>
             </Property>
           </Properties>
